Update README and added training info
